--- a/html/about.html
+++ b/html/about.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="/css/global.css">
+    <link rel="stylesheet" href="/css/about.css">
     <title>About ~ Ken Biñas</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <div class="about-me-hero">
+
+        <div class="about-me-content">
+
+            <h1 class="about-me-heading">A LITTLE <span>SOMETHING</span> <br> ABOUT ME</h1>
+
+            <p>I am <span> Ken Biñas</span>, but people call me <span class="ken">Ken</span> a student who is passsionate to learn web development</p>
+            <p>I find deep satisfaction in crafting engaging and intuitive digital experiences, always eager to explore new technologies and deepen my technical expertise.</p>
+            <p>Combining aesthetic design with robust functionality, I approach every project—from conceptualization to deployment—as a commitment to learning and delivering dynamic, high-quality solutions.</p>
+            
+        </div>
+    </div>
 </body>
 </html>
