--- a/index.html
+++ b/index.html
@@ -5,27 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins&display=swap">
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Ken Biñas Portfolio</title>
+    <link rel="stylesheet" href="/css/global.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <title>To Kayzel Ann Sanchez Bagoisan</title>
 </head>
 <body>
-    <div class="header">
-        <a class="logo" href="index.html">Ken Biñas</a>
-
-        <nav class="nav-button">
-            <a href="html/about.html">About</a>
-            <a href="html/skills.html">Skills</a>
-            <a href="html/project.html">Project</a>
-            <a href="html/contact.html">Contact</a>
-        </nav>
-
-        <div class="resume">
-            <a href="resume.html">Resume</a>
-        </div>
-
-    </div>
-
-
+    <h1 class="love-text">I Love You Kayzel Ann Sanchez Bagoisan</h1>
 </body>
 </html>
