--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins&display=swap">
     <link rel="stylesheet" href="/css/global.css">
     <link rel="stylesheet" href="/css/style.css">
-    <title>To Kayzel Ann Sanchez Bagoisan</title>
+    <title>To Kayzel Anne Sanchez Bagoisan</title>
 </head>
 <body>
     <h1 class="love-text">I Love You Kayzel Ann Sanchez Bagoisan</h1>
