--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <title>To Kayzel Anne Sanchez Bagoisan</title>
 </head>
 <body>
-    <h1 class="love-text">I Love You Kayzel Ann Sanchez Bagoisan</h1>
+    <h1 class="love-text">I Love You Kayzel Anne Sanchez Bagoisan</h1>
 </body>
 </html>
