--- a/html/about.html
+++ b/html/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/global.css">
     <link rel="stylesheet" href="/css/about.css">
-    <title>About ~ Ken Biñas</title>
+    <title>About | Ken Biñas</title>
 </head>
 <body>
     <div class="about-me-hero">
