--- a/index.html
+++ b/index.html
@@ -5,11 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins&display=swap">
+    <link rel="icon" type="images/png" href="images/gojo.png">
     <link rel="stylesheet" href="/css/global.css">
     <link rel="stylesheet" href="/css/style.css">
-    <title>To Kayzel Anne Sanchez Bagoisan</title>
+    <title>Ken | Student Developer</title>
 </head>
 <body>
-    <h1 class="love-text">I Love You Kayzel Anne Sanchez Bagoisan</h1>
+    <div class="header">
+        <a class="name-logo" href="index.html">Ken</a>
+        <div class="nav-links">
+            <a href="/html/about.html">About</a>
+            <a href="/html/skills.html">Skills</a>
+            <a href="/html/contact.html">Contact</a>
+            <a href="/html/project.html">Project</a>
+        </div>
+    </div>
+
+    <section class="intro">
+  <h1>Hi, I’m <span>Ken</span></h1>
+  <h2>Student Developer</h2>
+  <p>
+    I’m still learning programming, and I know the journey will be tough—
+    but I’m ready to grow.
+  </p>
+</section>
+    
 </body>
 </html>
