--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
     <link rel="stylesheet" href="/css/global.css">
     <link rel="stylesheet" href="/css/style.css">
     <title>Ken | Student Developer</title>
+    <script src="/js/main.js" defer> </script>
 </head>
 <body>
+    <div id="loader-wrapper">
+        <div class="loader"></div>
+        <p>Loading Awesome Stuff...</p>
+    </div>
     <div class="header">
         <a class="name-logo" href="index.html">Ken</a>
         <div class="nav-links">
