Updated the index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="header">
-        <a class="name-logo" href="index.html">Ken</a>
+        <a class="name-logo" href="index.html">Ken夜</a>
         <div class="nav-links">
             <a href="/html/about.html">About</a>
             <a href="/html/skills.html">Skills</a>  
@@ -24,7 +24,7 @@
     <section class="intro">
         <h1>Hi, I’m <span class="multiText"></span></h1>
         <h2>Student Developer</h2>
-        <p> A Student in University of Southern Mindanao </p>
+        <p class="about-me"> I enjoy building simple projects to improve my skills and understand how websites work. </p>
     </section>
    
     <script src="https://unpkg.com/typed.js@3.0.0/dist/typed.umd.js"></script>
