--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins&display=swap">
-    <link rel="icon" type="images/png" href="images/gojo.png">
+    <link rel="icon" type="images/png" href="images/anya2.png">
     <link rel="stylesheet" href="/css/global.css">
     <link rel="stylesheet" href="/css/style.css">
     <title>Ken | Student Developer</title>
@@ -13,12 +13,6 @@
 <body>
     <div class="header">
         <a class="name-logo" href="index.html">Ken夜</a>
-        <div class="nav-links">
-            <a href="/html/about.html">About</a>
-            <a href="/html/skills.html">Skills</a>  
-            <a href="/html/contact.html">Contact</a>
-            <a href="/html/project.html">Project</a>
-        </div>
     </div>
 
     <section class="intro">
@@ -26,6 +20,8 @@
         <h2>Student Developer</h2>
         <p class="about-me"> I enjoy building simple projects to improve my skills and understand how websites work. </p>
     </section>
+
+    <a class="btn" href="/html/dont.html">Don't Click</a>
    
     <script src="https://unpkg.com/typed.js@3.0.0/dist/typed.umd.js"></script>
     <script>
